correct workflow path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,21 @@ jobs:
       with:
         node-version: '16'
 
+    - name: Change directory to react-app
+      run: cd dna-rankings
+
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd dna-rankings
+        npm install
 
     - name: Build project
-      run: npm run build
+      run: |
+        cd dna-rankings
+        npm run build
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+        publish_dir: ./dna-rankings/build
